--- a/about/index.html
+++ b/about/index.html
@@ -1040,27 +1040,22 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <h3 id="company" style="position:relative;"><a href="#company" aria-label="company permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Company</h3>
 <h4 id="data-scientist-toss-core-toss-cb-20211206--present" style="position:relative;"><a href="#data-scientist-toss-core-toss-cb-20211206--present" aria-label="data scientist toss core toss cb 20211206  present permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Data Scientist</em>, <strong>Toss core, Toss CB</strong>, <strong>(2021.12.06 ~ present)</strong></h4>
 <ul>
-<li>Developed the bot which summarizes the long slack threads.
+<li>Perosnal CSS model for the CB.
 <ul>
-<li>help people to understand the context quickly with a minimum effort.</li>
-</ul>
-</li>
-<li>Developed the CSS model
-<ul>
-<li>more accurate &#x26; robust CSS model for more general targets like thinfiler and thickfiler.</li>
-<li>outperform about <strong>15%</strong> (on the primary metric) compared with the previous method.</li>
+<li>Developed a more accurate &#x26; robust CSS model for more general targets like thin-filer and thick-filer.</li>
+<li>Outperformed about <strong>15%</strong> (on the primary metric) compared with the previous method.</li>
 </ul>
 </li>
 <li>Classify the category of the user review for the NPS (Net Performer Score) product.
 <ul>
-<li>Build the RESTful API server to infer the deep learning model for the batch job.</li>
+<li>Built the RESTful API server to infer the deep learning model for the batch job.</li>
 <li>Saved analysis time and labor of the NPS team a lot.</li>
 </ul>
 </li>
 <li>Captcha model to break captchas for the automation product.
 <ul>
-<li>Developed the lightweight model to inference in real-time (about <code class="language-text">1000 TPS</code> for a batch transaction, <code class="language-text">80 ~ 100 TPS</code> for a sample on the CPU).</li>
-<li>Built the RESTful API server to serve the model in real time on the CPU.</li>
+<li>Developed the lightweight model for inference in real-time (about <code class="language-text">1000 TPS</code> for a batch transaction, <code class="language-text">80 ~ 100 TPS</code> for a sample on the CPU).</li>
+<li>Built the RESTful API server to serve the model in real-time on the CPU.</li>
 <li>In the A/B test, <code class="language-text">google vision OCR</code> vs <code class="language-text">New Captcha Model</code>
 <ul>
 <li><strong>Accuracy</strong> : improved <strong>50%p</strong> (<code class="language-text">45%</code> to <code class="language-text">95%</code>)</li>
@@ -1073,8 +1068,8 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>User consumption forecasting model for CDP Product.
 <ul>
 <li>Build an efficient pipeline to process and train lots of tabular data (about 500 GB).</li>
-<li>Developed a Transformer based sequential model that predicts what the users will consume from the next month.</li>
-<li>In A/B test, the new model achieved...</li>
+<li>Developed a Transformer based sequential model that predicts what the users will consume in the next month.</li>
+<li>In the A/B test, the new model achieved...</li>
 </ul>
 </li>
 <li>CSS model for BNPL (Buy Now Pay Later) service.
@@ -1088,7 +1083,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Developed the ads category classifier that increases revenue in a roundabout way.</li>
 </ul>
 </li>
-<li>Internel product, The Slack bot that summarizes the long slack threads
+<li>Internal product, The Slack bot that summarizes the long slack threads
 <ul>
 <li>help people to understand the context quickly with minimum effort.</li>
 </ul>
