--- a/about/index.html
+++ b/about/index.html
@@ -1095,9 +1095,12 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Watcha recommendation system to offer a better user experience and increase <code class="language-text">paid conversion</code>.
 <ul>
 <li>Developed the advanced the training recipe &#x26; architecture to improve training stability and offline performance. Also, worked on post-processing to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> online metric by about <strong>1.01%+</strong>.</li>
-<li>Developed the network to capture the time the user watches while the augmentations bring the training stability and performance gain. In the A/B test, the new model wins the online metrics by the followings. (compared with Div2Vec and the new model, previous deep learning model beats the current new model)</li>
+<li>Developed the network to capture the time the user watches while the augmentations bring the training stability and performance gain. In the A/B test, the new model wins the online metrics by the followings. (compared with Div2Vec and the new model, previous deep learning model beats the current new model)
+<ul>
 <li><strong>*Viewing Days (mean)</strong>: improved <strong>1.012%+</strong></li>
 <li><strong>*Viewing Minutes (median)</strong>: improved <strong>1.015%+</strong></li>
+</ul>
+</li>
 <li>Developed the sequential recommendation architecture to recommend what content to watch next. It achieved SOTA performance compared to the previous SOTA architecture like BERT4Rec. In the A/B test, the new model outperforms by the following metrics. (A: previous algorithm, B: the new model)
 <ul>
 <li><strong>Paid Conversion</strong> : improved <strong>1.39%p+</strong></li>
