--- a/about/index.html
+++ b/about/index.html
@@ -1095,13 +1095,13 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Watcha recommendation system to offer a better user experience and increase <code class="language-text">paid conversion</code>.
 <ul>
 <li>Developed the <strong>advanced the training recipe &#x26; architecture</strong> to improve training stability and offline performance. Also, worked on <strong>post-processing</strong> to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> online metric by about <strong>1.01%+</strong>.</li>
-<li>Developed the network to capture the time the user watches while the augmentations bring the training stability and performance gain. In the A/B test, the new model wins the online metrics by the followings. (compared with <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer">Div2Vec</a> and the new model, previous deep learning model beats the current new model)
+<li>Developed the network to capture the user active time while the augmentations bring the training stability and performance gain. In the A/B/C test, the new model beats <code class="language-text">Div2Vec</code> in the online metrics while achieved a comparable performance with the previous model (A: <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer">Div2Vec</a>, B: the previous model, C: the new model).
 <ul>
 <li><strong>*Viewing Days</strong> (mean): improved <strong>1.012%+</strong></li>
 <li><strong>*Viewing Minutes</strong> (median): improved <strong>1.015%+</strong></li>
 </ul>
 </li>
-<li>Developed the sequential recommendation architecture to recommend what content to watch next. It achieved SOTA performance compared to the previous SOTA architecture like BERT4Rec. In the A/B test, the new model outperforms by the following metrics. (A: previous algorithm, B: the new model)
+<li>Developed the sequential recommendation architecture to recommend what content to watch next. It achieved SOTA performance compared to the previous SOTA architecture like BERT4Rec. In the A/B test, the new model outperforms by the following metrics (A: previous algorithm, B: the new model).
 <ul>
 <li><strong>Paid Conversion</strong> : improved <strong>1.39%p+</strong></li>
 <li><strong>*Viewing Days</strong> (mean): improved <strong>0.25%p+</strong></li>
