--- a/about/index.html
+++ b/about/index.html
@@ -1046,7 +1046,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Outperformed by about <strong>~ 4%p</strong> (on the primary metric) compared with the previous method.</li>
 </ul>
 </li>
-<li>Perosnal CSS model for the CB.
+<li>CSS model for the Perosnal CB.
 <ul>
 <li>Developed a more accurate &#x26; robust CSS model, mainly targeting the thin-filer.</li>
 <li>Outperformed about <strong>15%</strong> (on the primary metric) compared with the previous method.</li>
@@ -1066,11 +1066,12 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li><strong>Accuracy (top1)</strong> : improved <strong>50%p</strong> (<code class="language-text">45%</code> to <code class="language-text">95%</code>)</li>
 <li><strong>latency (p95)</strong> : reduced by <strong>80x</strong> (about <code class="language-text">1000ms</code> to <code class="language-text">12ms</code>)</li>
 <li><strong>Revenue</strong> reduced cost by about <strong>$7,000 ~ / year</strong></li>
+<li>It also elaborates on decreasing a funnel and increasing user conversion.</li>
 </ul>
 </li>
 </ul>
 </li>
-<li>User consumptio :n forecasting model for the *CDP Product.
+<li>User consumption forecasting model for the *CDP Product.
 <ul>
 <li>Developed the Transformer based sequential model that predicts what the users will consume in the next month.</li>
 <li>Build an efficient pipeline to process and train lots of tabular data (about 500 GB).</li>
@@ -1101,8 +1102,8 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>
 <p>Watcha recommendation system to offer a better user experience and increase <code class="language-text">paid conversion</code>.</p>
 <ul>
-<li>Developed the <strong>advanced the training recipe &#x26; architecture</strong> to improve training stability and offline performance. Also, worked on <strong>post-processing</strong> to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> online metric by about <strong>1.01%+</strong>.</li>
-<li>Developed the network to capture the user's active time while the augmentations bring the training stability and performance gain. In the A/B/C test, the new model beats <code class="language-text">Div2Vec</code> in the online metrics while achieving comparable performance with the previous model (A: <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer">Div2Vec</a>, B: the previous model, C: the new model).
+<li>Developed the <strong>advanced the training recipe &#x26; architecture</strong> to improve training stability and offline performance. Also, working on <strong>post-processing</strong> to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> online metric by about <strong>1.01%+</strong>.</li>
+<li>Developed the network to capture the active time of user while the augmentations bring the training stability and performance gain. In the A/B/C test, the new model beats <code class="language-text">Div2Vec</code> in the online metrics while achieving comparable performance with the previous model (A: <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer">Div2Vec</a>, B: the previous model, C: the new model).
 <ul>
 <li><strong>*Viewing Days</strong> (mean): improved <strong>1.012%+</strong></li>
 <li><strong>*Viewing Minutes</strong> (median): improved <strong>1.015%+</strong></li>
@@ -1129,7 +1130,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>
 <p>Internal product to predict expected users' view-time of the content.</p>
 <ul>
-<li>Before the content is imported, the model gives an insight into the valuation of the content like expected view-time affecting the cost of the content.</li>
+<li>Before the content is imported, the model gives an insight into the valuation of the content, like expected view-time affecting the cost of the content.</li>
 </ul>
 </li>
 <li>
