--- a/about/index.html
+++ b/about/index.html
@@ -1102,7 +1102,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>
 <p>Watcha recommendation system to offer a better user experience and increase <code class="language-text">paid conversion</code>.</p>
 <ul>
-<li>Developed the <strong>advanced the training recipe &#x26; architecture</strong> to improve training stability and offline performance. Also, working on <strong>post-processing</strong> to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> online metric by about <strong>1.01%+</strong>.</li>
+<li>Developed the <strong>advanced the training recipe &#x26; architecture</strong> to improve training stability and the performance. Also, working on <strong>post-processing</strong> to recommend unseen content to users. In the A/B test, the new model boosts the <strong>Click Ratio</strong> by about <strong>1.01%+</strong>.</li>
 <li>Developed the network to capture the active time of user while the augmentations bring the training stability and performance gain. In the A/B/C test, the new model beats <code class="language-text">Div2Vec</code> in the online metrics while achieving comparable performance with the previous model (A: <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer">Div2Vec</a>, B: the previous model, C: the new model).
 <ul>
 <li><strong>*Viewing Days</strong> (mean): improved <strong>1.012%+</strong></li>
@@ -1121,7 +1121,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </ul>
 </li>
 <li>
-<p>Face recognition model to find actors from the poster &#x26; still-cut images for the Watcha Pedia product.</p>
+<p>Face recognition architecture to find actors from the poster &#x26; still-cut images for the Watcha Pedia product.</p>
 <ul>
 <li>Developed the pipeline to identify &#x26; recognizing actor faces from the images with the face detection &#x26; identification deep learning models (similarity-based searching).</li>
 <li>Built a daily job that runs on the CPU. Also, optimize CPU-intensive operations to run fast.</li>
