--- a/about/index.html
+++ b/about/index.html
@@ -952,7 +952,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>
 <p><strong>Kaggle Challenges</strong> :: Kaggle Challenges :: <strong>Competition Expert</strong></p>
 <blockquote>
-<p><a href="https://www.kaggle.com/competitions/birdclef-2023" target="_blank" rel="nofollow noopener noreferrer">BirdCLEF 2023</a> - <strong>sole, top 2% (24 / 1189), Private 0.73641</strong> - (2023.)</p>
+<p><a href="https://www.kaggle.com/competitions/birdclef-2023" target="_blank" rel="nofollow noopener noreferrer">BirdCLEF 2023</a> - <strong>sole, top 2% (24 / 1189), Private 0.73641</strong> - <a href="https://www.kaggle.com/competitions/birdclef-2023/discussion/412996" target="_blank" rel="nofollow noopener noreferrer">solution</a> (2023.)</p>
 </blockquote>
 <blockquote>
 <p><a href="https://www.kaggle.com/competitions/asl-signs" target="_blank" rel="nofollow noopener noreferrer">Google - Isolated Sign Language Recognition</a> - <strong>sole, top 5% (63 / 1165), Private 0.8377</strong> - (2023.)</p>
