--- a/about/index.html
+++ b/about/index.html
@@ -829,6 +829,9 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#recent-interests">Recent Interests</a></p>
 </li>
 <li>
+<p><a href="#brief-introduction">Brief Introduction</a></p>
+</li>
+<li>
 <p><a href="#challenges--awards">Challenges &#x26; Awards</a></p>
 <ul>
 <li><a href="#machine-learning">Machine Learning</a></li>
@@ -946,6 +949,12 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </ul>
 <p>Previously, I was also interested in <strong>offensive security</strong>, kind of <em>Reverse Engineering</em>, <em>Linux Kernel Exploitation</em>.</p>
 <hr>
+<h2 id="brief-introduction" style="position:relative;"><a href="#brief-introduction" aria-label="brief introduction permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Brief Introduction</h2>
+<ul>
+<li>Develop &#x26; service practical ML/DL products in various domains, Audio, Vision, NLP, and Tabular.</li>
+<li>Research &#x26; develop a recommendation system and contribute to ML team development culture.</li>
+<li>Kaggle, 2x Expert. the highest competition rank is top 0.1%.</li>
+</ul>
 <h2 id="challenges--awards" style="position:relative;"><a href="#challenges--awards" aria-label="challenges  awards permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Challenges &#x26; Awards</h2>
 <h3 id="machine-learning" style="position:relative;"><a href="#machine-learning" aria-label="machine learning permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Machine Learning</h3>
 <ul>
@@ -1384,6 +1393,9 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#recent-interests">Recent Interests</a></p>
 </li>
 <li>
+<p><a href="#brief-introduction">Brief Introduction</a></p>
+</li>
+<li>
 <p><a href="#challenges--awards">Challenges &#x26; Awards</a></p>
 <ul>
 <li><a href="#machine-learning">Machine Learning</a></li>
@@ -1468,4 +1480,4 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
           >
             window.___chunkMapping="{\"app\":[\"/app.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx.js\"],\"component---src-pages-search-tsx\":[\"/component---src-pages-search-tsx.js\"],\"component---src-pages-tags-tsx\":[\"/component---src-pages-tags-tsx.js\"],\"component---src-templates-post-tsx\":[\"/component---src-templates-post-tsx.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="888a4c1906f679bf4dac";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="c30a6b507f0234ac0146";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
