--- a/about/index.html
+++ b/about/index.html
@@ -1095,7 +1095,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Internal product, The Slack bots that summarize the long threads.
 <ul>
 <li>help people to <strong>understand the context</strong> quickly with minimum effort.</li>
-<li>summarize the weekly mail using ChatGPT with prompt engineerings.</li>
+<li>summarize the weekly mail using ChatGPT with prompt engineering.</li>
 </ul>
 </li>
 <li>Working as full-time.</li>
@@ -1467,4 +1467,4 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
           >
             window.___chunkMapping="{\"app\":[\"/app.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx.js\"],\"component---src-pages-search-tsx\":[\"/component---src-pages-search-tsx.js\"],\"component---src-pages-tags-tsx\":[\"/component---src-pages-tags-tsx.js\"],\"component---src-templates-post-tsx\":[\"/component---src-templates-post-tsx.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="30f776d01b4668821874";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="54ea7d3a344923f2897f";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
