--- a/about/index.html
+++ b/about/index.html
@@ -1078,7 +1078,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>User consumption forecasting model for the *CDP Product.
 <ul>
 <li>Developed the Transformer based sequential model that predicts what the users will consume in the next month.</li>
-<li>Built an efficient pipeline to process and train lots of tabular data (about 500 GB).</li>
+<li>Built an efficient pipeline to process and train lots of tabular data.</li>
 </ul>
 </li>
 <li>CSS model for BNPL (Buy Now Pay Later) service.
@@ -1467,4 +1467,4 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
           >
             window.___chunkMapping="{\"app\":[\"/app.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx.js\"],\"component---src-pages-search-tsx\":[\"/component---src-pages-search-tsx.js\"],\"component---src-pages-tags-tsx\":[\"/component---src-pages-tags-tsx.js\"],\"component---src-templates-post-tsx\":[\"/component---src-templates-post-tsx.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="54ea7d3a344923f2897f";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="62c84e9a39502a331c39";</script><script src="/webpack-runtime.js" async></script><script src="/app.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
