--- a/review-2023/index.html
+++ b/review-2023/index.html
@@ -837,13 +837,15 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#%EB%8B%A4%EC%8B%9C-%EC%8A%A4%ED%83%80%ED%8A%B8%EC%97%85%EC%9C%BC%EB%A1%9C-%EA%B7%B8%EB%9F%B0%EB%8D%B0-%EC%B4%88%EA%B8%B0-%EB%A9%A4%EB%B2%84%EB%A1%9C">다시 스타트업으로, 그런데 초기 멤버로</a></p>
 </li>
 <li>
-<p><a href="#%EA%B8%B0%ED%83%80">기타</a></p>
+<p><a href="#%EA%B0%9C%EB%B0%9C">개발</a></p>
 <ul>
 <li><a href="#pytorch-optimizer">pytorch-optimizer</a></li>
 <li><a href="#open-source-contributions">open source contributions</a></li>
 <li><a href="#leetcode">Leetcode</a></li>
-<li><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D">클라이밍</a></li>
 </ul>
+</li>
+<li>
+<p><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D">클라이밍</a></p>
 </li>
 <li>
 <p><a href="#%EB%A7%88%EB%AC%B4%EB%A6%AC">마무리</a></p>
@@ -935,7 +937,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
   </a>
     </span></p>
 <p>이외로는, 수상하리만큼 우리 회사에 외향적인 사람이 대다수인데 (e.g. ENTP, ESTJ, ...), INTJ-A인 나로선 조금 신기한 경험을 하고 있다. 내 인생 전체에서 바도 드문 상황인데, 아무튼 흥미롭게 관찰하고 있다.</p>
-<h2 id="기타" style="position:relative;"><a href="#%EA%B8%B0%ED%83%80" aria-label="기타 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>기타</h2>
+<h2 id="개발" style="position:relative;"><a href="#%EA%B0%9C%EB%B0%9C" aria-label="개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>개발</h2>
 <h3 id="pytorch-optimizer" style="position:relative;"><a href="#pytorch-optimizer" aria-label="pytorch optimizer permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>pytorch-optimizer</h3>
 <p>올해 4월쯤에 새롭게 단장을 했다. 원래는 혼자 쓰려는 목적으로 개발했지만, 사용자들이 늘어나고 feature request가 종종 들어와서 전략을 조금 바꿨다. 전에는 기능도 적고 다른 곳에 이미 있는 것들은 구현하지 않았는데, 모든 구현체를 지원하고 사용성 개선하고 테스트도 빡세게 돌리는 방향으로 전략을 바꿔봤다.</p>
 <p>리브랜딩하고 점점 사용자 수가 많아지더니 최근에는 최대 <strong>2K downloads / day, 10K downloads / weeks, 55K downloads / month</strong>, 155 stars를 달성했다. 4월, 10월에 한 번 크게 사용자 수가 늘어났을 때가 있었는데, 개인적으로 가장 짜릿했던 순간이었다.</p>
@@ -947,9 +949,9 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p>결론은 rust가 미래다!</p>
 <h3 id="leetcode" style="position:relative;"><a href="#leetcode" aria-label="leetcode permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Leetcode</h3>
 <p>올해 4월부터인가 매일 1문제씩 leetcode를 풀기 시작했다. 기억은 잘 안 나는데, 하다 보니 재밌어서 계속하게 된 거 같다. 그런데 요즘은 바빠서 고민하는 시간이 줄고 답을 빠르게 보고 있는데 시간을 좀 할당해 두고 여유롭게 풀어야 할 거 같다.</p>
-<h3 id="클라이밍" style="position:relative;"><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D" aria-label="클라이밍 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>클라이밍</h3>
-<p>클라이밍 시작한 지 1년이 넘었고, 매주 1회씩 꼭 다니고 있다. 작년 목표가 보라 클라이머가 목표였는데 (무지개 난이도 기준), 아직 아무 보라색이나 깰 정도로 잘하진 못하지만, 남색은 웬만하면 플래쉬하고 힘이 남으면 보라색에 도전하는 중이다.</p>
-<p>질리지 않고 할 수 있었던 가장 큰 이유는 악력이다. 악력기 제품마다 절대적인 기준이 다르지만, 악력도 작년보다 2 ~ 30 이상 오른 60 정도로 많이 늘었고 악력이 강해질수록 전에 안되는 동작들이 되기 시작할 때가 탑 찍는 것만큼 즐거웠고 동기부여가 됐다.</p>
+<h2 id="클라이밍" style="position:relative;"><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D" aria-label="클라이밍 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>클라이밍</h2>
+<p>클라이밍 시작한 지 1년이 넘었고, 매주 1회씩 빠지지 않고 꼭 가고 있다. 작년 목표가 보라 클라이머가 목표였는데 (무지개 난이도 기준), 아직 아무 보라색이나 깰 정도로 잘하진 못하지만, 남색은 웬만하면 플래쉬하고 힘이 남으면 보라색에 도전하는 중이다.</p>
+<p>질리지 않고 할 수 있었던 가장 큰 이유는 악력인데, 악력기 제품마다 절대적인 기준이 다르지만, 악력도 작년보다 2 ~ 30 이상 오른 60 정도로 많이 늘었고 악력이 강해질수록 전에 안되는 동작들이 되기 시작할 때가 탑 찍는 것만큼 즐거웠고 동기부여가 됐다.</p>
 <p>이제는 악력보다 처음 해 보는 무브나 슬로퍼에서 막히는 느낌이라 올해는 디테일을 채워가면서 보라색을 플래쉬할 수 있는 날을 목표로 해야겠다.</p>
 <h2 id="마무리" style="position:relative;"><a href="#%EB%A7%88%EB%AC%B4%EB%A6%AC" aria-label="마무리 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>마무리</h2>
 <p>매년 아쉽지 않게 다양한 일이 벌어지는데, 이쯤이면 그냥 받아들이고 즐겨야겠단 생각도 들고, 당시엔 스트레스 좀 받지만 사실 싫지 않은 거 같다.</p>
@@ -971,13 +973,15 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <p><a href="#%EB%8B%A4%EC%8B%9C-%EC%8A%A4%ED%83%80%ED%8A%B8%EC%97%85%EC%9C%BC%EB%A1%9C-%EA%B7%B8%EB%9F%B0%EB%8D%B0-%EC%B4%88%EA%B8%B0-%EB%A9%A4%EB%B2%84%EB%A1%9C">다시 스타트업으로, 그런데 초기 멤버로</a></p>
 </li>
 <li>
-<p><a href="#%EA%B8%B0%ED%83%80">기타</a></p>
+<p><a href="#%EA%B0%9C%EB%B0%9C">개발</a></p>
 <ul>
 <li><a href="#pytorch-optimizer">pytorch-optimizer</a></li>
 <li><a href="#open-source-contributions">open source contributions</a></li>
 <li><a href="#leetcode">Leetcode</a></li>
-<li><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D">클라이밍</a></li>
 </ul>
+</li>
+<li>
+<p><a href="#%ED%81%B4%EB%9D%BC%EC%9D%B4%EB%B0%8D">클라이밍</a></p>
 </li>
 <li>
 <p><a href="#%EB%A7%88%EB%AC%B4%EB%A6%AC">마무리</a></p>
