--- a/about/index.html
+++ b/about/index.html
@@ -1045,7 +1045,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <hr>
 <h2 id="work-experience" style="position:relative;"><a href="#work-experience" aria-label="work experience permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Work Experience</h2>
 <ul>
-<li><strong>2023</strong> : Joined Sionic AI. Building enterprise-grade full-stack platform for LLM applications.</li>
+<li><strong>2023</strong> : Joined Sionic AI. Building an enterprise-grade full-stack platform for LLM applications.</li>
 <li><strong>2021 - 2023</strong> : Joined Viva Republica (Toss). Developed and contributed to many products like BNPL, CSS, OCR, NPS, CDP, and in-house products.</li>
 <li><strong>2020 - 2021</strong> : Joined Watcha to build a recommendation system with deep learning. Developed deep learning recommender that outperforms the previous algorithm, and contributed to other products like WatchaPedia, in-house applications.</li>
 <li><strong>2019 - 2020</strong> : Joined Rainist (Banksalad). Developed a transaction classifier service to analyze the categories with low latency, high accuracy, and in real-time.</li>
